--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,7 +31,7 @@ body {
 
 body {
   background: var(--background);
-  /* color: var(--foreground); */
+  color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
 
